--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -278,7 +278,10 @@
                 <controls:LiteTubePlayer x:Name="player"
                                          Source="{Binding VideoUri}"
                                          VideoTitle="{Binding Title}"
+                                         ChannelTitle="{Binding ChannelTitle}"
+                                         ItemClickCommand="{Binding RelatedVideosViewModel.ItemClickCommand}"
                                          PosterSource="{Binding ImagePath}"
+                                         RelatedItems="{Binding RelatedVideosViewModel.Items}"
                                          IsFullScreenVisible="True"
                                          IsFullScreenEnabled="True"
                                          VerticalAlignment="Center"
