--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -1,9 +1,12 @@
 ﻿<ResourceDictionary
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:sys="clr-namespace:System;assembly=mscorlib"
-  xmlns:local="clr-namespace:Microsoft.PlayerFramework;assembly=Microsoft.PlayerFramework"
-  xmlns:controls="clr-namespace:LiteTube.Controls">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:local="clr-namespace:Microsoft.PlayerFramework;assembly=Microsoft.PlayerFramework"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:controls="clr-namespace:LiteTube.Controls"
+    xmlns:common="clr-namespace:LiteTube.Common">
+    
     <SolidColorBrush x:Key="TransportBackgroundBrush" Color="#80000000"/>
     <SolidColorBrush x:Key="TransportReversedBackgroundBrush" Color="#80000000"/>
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#33000000"/>
@@ -629,8 +632,61 @@
         </Setter>
     </Style>
 
+    <DataTemplate x:Key="RelatedVideoItem">
+        <Grid Margin="10,0,10,10">
+            <Grid Grid.Column="0" 
+                  HorizontalAlignment="Center"
+                  Background="LightGray"
+                  Height="100"
+                  Width="178">
+
+                <Image Source="{Binding ImagePath}" 
+                       Stretch="UniformToFill" />
+
+                <Border Margin="2"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Background="Black"
+                        Padding="4,0,4,0">
+                    <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
+                               TextWrapping="NoWrap" 
+                               Foreground="White"
+                               FontSize="14"/>
+                </Border>
+            </Grid>
+
+            <!--<StackPanel Grid.Column="1" 
+                        Margin="0,0,0,0">
+                <TextBlock Text="{Binding Title}" 
+                           Style="{StaticResource PhoneTextNormalStyle}"
+                           TextTrimming="WordEllipsis"
+                           TextWrapping="Wrap"
+                           MaxHeight="54"/>
+                <TextBlock Text="{Binding ChannelTitle}" 
+                           Style="{StaticResource PhoneTextSmallStyle}"
+                           TextWrapping="NoWrap"/>
+                <TextBlock TextWrapping="NoWrap"
+                           Text="{Binding PublishedAt}"
+                           Style="{StaticResource PhoneTextSmallStyle}">
+                    <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
+                    <Run Text="{Binding PublishedAt}" />
+                </TextBlock>
+            </StackPanel>-->
+        </Grid>
+    </DataTemplate>
+    
     <ControlTemplate x:Key="ControlPanelTemplate" TargetType="local:ControlPanel">
-        <Grid VerticalAlignment="Bottom">
+        <Grid VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="MediaStates">
                     <VisualState x:Name="Opening"/>
@@ -648,8 +704,45 @@
                     <VisualState x:Name="Portrait"/>
                 </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
+            
+            <!--Title-->
+            <StackPanel Orientation="Vertical" 
+                        Height="60"
+                        Background="{StaticResource ControlBackgroundBrush}"
+                        Grid.Row="0"
+                        DataContext="{TemplateBinding ViewModel}" 
+                        Grid.Column="0">
+                <TextBlock Text="{Binding VideoTitle}"
+                           VerticalAlignment="Center"
+                           Margin="30,0,0,0"
+                           Foreground="{StaticResource PlayerButtonsBrush}"/>
+                <TextBlock Text="{Binding ChannelTitle}"
+                           VerticalAlignment="Center"
+                           Margin="30,0,0,0"
+                           FontSize="16"
+                           Foreground="#FFF1F0EE"/>
+            </StackPanel>
 
-            <Border x:Name="Border" DataContext="{TemplateBinding ViewModel}" Background="{TemplateBinding Background}">
+            <Border x:Name="RelatedBorder" 
+                    Grid.Column="1"
+                    Grid.Row="0"
+                    Grid.RowSpan="3"
+                    DataContext="{TemplateBinding ViewModel}" 
+                    Background="{TemplateBinding Background}"
+                    Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <ListBox ItemsSource="{Binding RelatedItems}"
+                         ItemTemplate="{StaticResource RelatedVideoItem}"
+                         common:ItemClickCommand.Command="{Binding ItemClickCommand}"
+                         toolkit:TiltEffect.IsTiltEnabled="True" >
+                </ListBox>
+            </Border>
+
+            <!--Controls-->
+            <Border x:Name="Border" 
+                    DataContext="{TemplateBinding ViewModel}" 
+                    Background="{TemplateBinding Background}"
+                    Grid.Column="0"
+                    Grid.Row="2">
                 <Border.Resources>
                     <local:BoolToVisibilityConverter x:Key="VisibleIfConverter" />
                 </Border.Resources>
@@ -660,7 +753,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-
+                    
                     <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right" Margin="0,10,10,-20">
                         <Button x:Name="ReplayButton" Style="{TemplateBinding TransportBarButtonStyle}" Visibility="{Binding IsReplayButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
                             <local:MediaControls.Behavior>
@@ -719,6 +812,7 @@
                         </Button>
                     </StackPanel>
 
+                    <!--Play / pause buttons-->
                     <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center"
                                 Margin="0,0,0,0">
 
@@ -772,6 +866,7 @@
 
                     </StackPanel>
 
+                    <!-- Time line-->
                     <Grid Grid.Row="2" Margin="30,30,25,-10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
@@ -829,9 +924,21 @@
                         </TextBlock>
                     </Grid>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Right" Margin="30,0,30,10">
-                        <local:SignalStrength x:Name="SignalStrength" Value="{Binding SignalStrength}" Margin="10,0,0,0" VerticalAlignment="Center" Visibility="{Binding IsSignalStrengthVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"/>
-                        <local:ResolutionIndicator x:Name="ResolutionIndicator" MediaQuality="{Binding MediaQuality}" VerticalAlignment="Center" Margin="10,0,10,0" Visibility="{Binding IsResolutionIndicatorVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"/>
+                    <!--Resolution and signal strength-->
+                    <StackPanel Orientation="Horizontal" 
+                                Grid.Row="3" 
+                                HorizontalAlignment="Right" 
+                                Margin="30,0,30,10">
+                        <local:SignalStrength x:Name="SignalStrength" 
+                                              Value="{Binding SignalStrength}" 
+                                              Margin="10,0,0,0" 
+                                              VerticalAlignment="Center" 
+                                              Visibility="{Binding IsSignalStrengthVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"/>
+                        <local:ResolutionIndicator x:Name="ResolutionIndicator" 
+                                                   MediaQuality="{Binding MediaQuality}" 
+                                                   VerticalAlignment="Center" 
+                                                   Margin="10,0,10,0" 
+                                                   Visibility="{Binding IsResolutionIndicatorVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"/>
                     </StackPanel>
 
                 </Grid>
@@ -1009,19 +1116,6 @@
                         </Grid>
                         <Grid x:Name="ErrorsContainer" Visibility="Collapsed"/>
                         <Grid x:Name="InteractivityContainer" Visibility="Collapsed">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <StackPanel Orientation="Horizontal" Height="60"
-                                        Background="{StaticResource ControlBackgroundBrush}">
-                                <TextBlock Text="{Binding VideoTitle,RelativeSource={RelativeSource TemplatedParent}}"
-                                           VerticalAlignment="Center"
-                                           Margin="30,0,0,0"
-                                           Foreground="{StaticResource PlayerButtonsBrush}"/>
-                            </StackPanel>
-
                             <local:ControlPanel x:Name="ControlPanel" 
                                                 Grid.Row="2"
                                                 ViewModel="{TemplateBinding InteractiveViewModel}"
