--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -35,6 +35,7 @@
             <converters:LowerCaseConverter x:Key="LowerCaseConverter"/>
             <converters:LoginStatusTextConverter x:Key="LoginStatusTextConverter"/>
             <converters:DateTimeToStringConverter x:Key="DateTimeToStringConverter"/>
+            <converters:ColumnSpanConverter x:Key="ColumnSpanConverter"/>
 
             <sys:Double x:Key="PanoramaItemHeaderMiddleFontSize">36</sys:Double>
 
