--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -685,6 +685,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <VisualStateManager.VisualStateGroups>
@@ -707,22 +708,51 @@
             
             <!--Title-->
             <StackPanel Orientation="Vertical" 
-                        Height="60"
+                        x:Name="TitlePanel"
                         Background="{StaticResource ControlBackgroundBrush}"
                         Grid.Row="0"
                         DataContext="{TemplateBinding ViewModel}" 
-                        Grid.Column="0">
+                        Grid.Column="0"
+                        Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <TextBlock Text="{Binding VideoTitle}"
                            VerticalAlignment="Center"
-                           Margin="30,0,0,0"
+                           Margin="10,0,0,5"
                            TextWrapping="Wrap"
                            Foreground="{StaticResource PlayerButtonsBrush}"/>
                 <TextBlock Text="{Binding ChannelTitle}"
                            VerticalAlignment="Center"
-                           Margin="30,0,0,0"
+                           Margin="10,0,5,5"
                            FontSize="16"
                            Foreground="#FFD1D1D1"/>
             </StackPanel>
+
+            <!--Title portrait-->
+            <StackPanel Orientation="Vertical" 
+                        x:Name="TitlePanelPortrait"
+                        Height="55"
+                        Background="{StaticResource ControlBackgroundBrush}"
+                        Grid.Row="0"
+                        DataContext="{TemplateBinding ViewModel}" 
+                        Grid.Column="0"
+                        Grid.ColumnSpan="3"
+                        Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource InverseBooleanToVisibilityConverter}}">
+                <TextBlock Text="{Binding VideoTitle}"
+                           VerticalAlignment="Center"
+                           Margin="10,0,0,10"
+                           TextWrapping="Wrap"
+                           Foreground="{StaticResource PlayerButtonsBrush}"/>
+                <TextBlock Text="{Binding ChannelTitle}"
+                           VerticalAlignment="Center"
+                           Margin="10,0,0,10"
+                           FontSize="16"
+                           Foreground="#FFD1D1D1"/>
+            </StackPanel>
+
+            <Border Grid.Column="2"
+                    Grid.Row="0"
+                    DataContext="{TemplateBinding ViewModel}" 
+                    Background="{TemplateBinding Background}"
+                    Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
             <Border x:Name="RelatedBorder" 
                     Grid.Column="1"
@@ -735,7 +765,8 @@
                          ItemTemplate="{StaticResource RelatedVideoItem}"
                          common:ItemClickCommand.Command="{Binding ItemClickCommand}"
                          ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                         toolkit:TiltEffect.IsTiltEnabled="True">
+                         toolkit:TiltEffect.IsTiltEnabled="True"
+                         Margin="0,0,0,0">
                 </ListBox>
             </Border>
 
@@ -744,6 +775,7 @@
                     DataContext="{TemplateBinding ViewModel}" 
                     Background="{TemplateBinding Background}"
                     Grid.Column="0"
+                    Grid.ColumnSpan="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource ColumnSpanConverter}}"
                     Grid.Row="2">
                 <Border.Resources>
                     <local:BoolToVisibilityConverter x:Key="VisibleIfConverter" />
@@ -797,11 +829,11 @@
                                 <local:InfoButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </local:MediaControls.Behavior>
                         </Button>
-                        <Button x:Name="FullScreenButton" Style="{TemplateBinding TransportBarButtonStyle}" Visibility="{Binding IsFullScreenButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                        <!--<Button x:Name="FullScreenButton" Style="{TemplateBinding TransportBarButtonStyle}" Visibility="{Binding IsFullScreenButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
                             <local:MediaControls.Behavior>
                                 <local:FullScreenButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </local:MediaControls.Behavior>
-                        </Button>
+                        </Button>-->
                         <Button x:Name="MuteButton" Style="{TemplateBinding TransportBarButtonStyle}" Visibility="{Binding IsMuteButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
                             <local:MediaControls.Behavior>
                                 <local:MuteButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
@@ -816,7 +848,7 @@
 
                     <!--Play / pause buttons-->
                     <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center"
-                                Margin="0,0,0,0">
+                                Margin="0,10,0,0">
 
                         <StackPanel Orientation="Horizontal" x:Name="NonEssentialsNearLeft"
                                     Margin="0,0,0,0">
@@ -945,6 +977,28 @@
 
                 </Grid>
             </Border>
+
+            <Border x:Name="FullscreenBorder" 
+                    DataContext="{TemplateBinding ViewModel}" 
+                    Background="{TemplateBinding Background}"
+                    Grid.Column="2"
+                    Grid.Row="2"
+                    Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Border.Resources>
+                    <local:BoolToVisibilityConverter x:Key="VisibleIfConverter" />
+                </Border.Resources>
+            </Border>
+
+            <Button x:Name="FullScreenButton" 
+                    Style="{TemplateBinding TransportBarButtonStyle}" 
+                    Grid.Column="2"
+                    Grid.Row="2"
+                    Margin="10,10,10,10"
+                    VerticalAlignment="Top">
+                <local:MediaControls.Behavior>
+                    <local:FullScreenButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
+                </local:MediaControls.Behavior>
+            </Button>
         </Grid>
     </ControlTemplate>
 
