--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -38,7 +38,7 @@
                        VerticalAlignment="Center"
                        Margin="20,0,0,0"
                        MaxHeight="80"
-                       Foreground="{StaticResource PhoneSubtleBrush}"/>
+                       Foreground="{StaticResource PhoneSecondaryForegroundBrush}"/>
             
             <Border Grid.Column="1"
                     Margin="20"
@@ -196,7 +196,7 @@
                                                      Command="{Binding ChannelCommand}"
                                                      CommandParameter="{Binding AuthorChannelId}"
                                                      FontSize="{StaticResource PhoneFontSizeNormal}"
-                                                     Foreground="{StaticResource PhoneSecondaryForegroundBrush}"
+                                                     Foreground="{StaticResource PhoneSubtleBrush}"
                                                      HorizontalAlignment="Left"
                                                      HorizontalContentAlignment="Left"/>
                                     <TextBlock TextWrapping="NoWrap"
@@ -204,7 +204,7 @@
                                                Text="{Binding PublishedAt, Converter={StaticResource DateTimeToStringConverter}}"
                                                HorizontalAlignment="Left"
                                                Style="{StaticResource PhoneTextExtraSmallStyle}"
-                                               Foreground="{StaticResource PhoneSecondaryForegroundBrush}"
+                                               Foreground="{StaticResource PhoneSubtleBrush}"
                                                Margin="0,7,0,0"/>
                                 </Grid>
 
