--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -637,7 +637,7 @@
         <Grid Margin="5,5,5,5">
             <Grid Grid.Column="0" 
                   HorizontalAlignment="Center"
-                  Background="DarkGray"
+                  Background="#FF262626"
                   Height="100"
                   Width="178">
 
