--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -70,6 +70,7 @@
                 <Border Margin="2"
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
+                        Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
                         Background="Black"
                         Padding="4,0,4,0">
                     <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
